# CENG536_HW

./: .gitignore  CENG536_HW2.docx  CMakeLists.txt  README.md  part1.c  part2.c  random_generator.c  random_generator.h  run.sh  sorting.c  sorting.h  utils.c  utils.h
Part1/: CMakeLists.txt  input.txt  main.c  myapp  part1
Part2/: CMakeLists.txt  input.txt  main.c  part2
Part3/: CMakeLists.txt  input.txt  main.c  part3
